Memos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos
  labels:
    app.kubernetes.io/name: memos
