Memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
  labels:
    app.kubernetes.io/name: memos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: memos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: memos
    spec:
      containers:
      - name: memos
        image: "neosmemo/memos:0.30.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5230
          protocol: TCP
        volumeMounts:
        - name: memos-data
          mountPath: /var/opt/memos
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: 5230
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 5230
          initialDelaySeconds: 15
          periodSeconds: 15
          failureThreshold: 3
      volumes:
      - name: memos-data
        persistentVolumeClaim:
          claimName: memos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: memos-svc
  namespace: memos
  labels:
    app.kubernetes.io/name: memos
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: memos
  ports:
  - port: 5230
    name: http
    targetPort: http
    protocol: TCP
